syntax = "proto3";

package com.ssafy.pjt.grpc;

// python -m grpc_tools.protoc --python_out=. --grpc_python_out=. --proto_path=. ./image2.proto

service CreateImage {
  rpc sendImage ( OriginalImageInfo ) returns ( ProcessedImageInfo );
}

message OriginalImageInfo {
  bytes originalImage = 1;
  Options options = 2;
}

message ProcessedImageInfo{
  bytes processedImage = 1;
  ResponseUrl responseUrl= 2;
  bool status = 3;  // 새로 추가
  string errorMessage = 4;  // 새로 추가
}

message Options {
  string background = 1;
  string suit = 2;
  string hair = 3;
  string gender = 4;  // 새로 추가
}

message ResponseUrl {
  string originalImageUrl = 1;
  string processedImageUrl = 2;
  string thumbnailImageUrl = 3;
}
